<?xml version="1.0"?>
<package format="2">

  <name>mrs_uav_manager</name>
  <version>0.0.1</version>
  <description>The mrs_uav_manager package</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>mrs_msgs</depend>
  <depend>nodelet</depend>
  <depend>mrs_lib</depend>
  <depend version_eq="0.30.0">mavros_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/plugins.xml" />
    <mrs_uav_manager plugin="${prefix}/null_tracker.xml" />
  </export>

</package>
