<?xml version="1.0"?>
<package format="2">

  <name>mrs_uav_managers</name>
  <version>0.0.5</version>
  <description>The mrs_uav_managers package</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>mrs_msgs</depend>
  <depend>nodelet</depend>
  <depend>mrs_lib</depend>
  <depend>mavros_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/plugins.xml" />
    <mrs_uav_managers plugin="${prefix}/null_tracker.xml" />
  </export>

</package>
