<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>mrs_uav_managers</name>

  <version>2.0.0</version>
  <description>MRS UAV Managers</description>

  <author email="tomas.baca@fel.cvut.cz">klaxalk</author>
  <maintainer email="tomas.baca@fel.cvut.cz">klaxalk</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>pluginlib</depend>
  <depend>builtin_interfaces</depend>

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>eigen</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_uav_hw_api</depend>
  <depend>mrs_uav_testing</depend>

  <depend>backward_ros</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
