add_subdirectory(goto_service)

add_subdirectory(goto_fcu_service)

add_subdirectory(goto_relative_service)

add_subdirectory(eland_control_error)

add_subdirectory(eland_innovation)

add_subdirectory(failsafe_control_error)

add_subdirectory(eland_service)

add_subdirectory(escalating_failsafe_service)

add_subdirectory(escalating_failsafe_rc)

add_subdirectory(rc_remote_control)

add_subdirectory(bumper)

add_subdirectory(trajectory_topic)

add_subdirectory(trajectory_start_stop_resume)

add_subdirectory(velocity_reference_topic)

add_subdirectory(set_heading_service)

add_subdirectory(set_heading_relative_service)

add_subdirectory(goto_altitude_service)

add_subdirectory(hover_service)

add_subdirectory(reference_service)

add_subdirectory(reference_service_local_origin)

add_subdirectory(reference_topic)

add_subdirectory(validate_reference_service)

add_subdirectory(validate_reference_list_service)

add_subdirectory(transform_reference_service)

add_subdirectory(transform_pose_service)

add_subdirectory(transform_vector3_service)
