add_subdirectory(./control_manager_start_stop)

add_subdirectory(./goto_service)

add_subdirectory(./goto_fcu_service)

add_subdirectory(./goto_relative_service)

add_subdirectory(./goto_altitude_service)

add_subdirectory(./reference_service)

add_subdirectory(./reference_local_origin_service)

add_subdirectory(./reference_topic)

add_subdirectory(./set_heading_service)

add_subdirectory(./set_heading_relative_service)

add_subdirectory(./velocity_reference_topic)

add_subdirectory(./validate_reference_service)

add_subdirectory(./validate_reference_array_service)

add_subdirectory(./transform_pose_service)

add_subdirectory(./transform_reference_service)

add_subdirectory(./transform_vector3_service)

add_subdirectory(./eland_control_error)

add_subdirectory(./eland_innovation)

add_subdirectory(./eland_service)

add_subdirectory(./trajectory_topic)

add_subdirectory(./hover_service)

add_subdirectory(./failsafe_control_error)

add_subdirectory(./trajectory_start_stop_resume_services)

add_subdirectory(./escalating_failsafe_service)
