add_subdirectory(takeoff)

add_subdirectory(takeoff_fail_cause_controller)

add_subdirectory(takeoff_fail_cause_tracker)

add_subdirectory(midair_fail_cause_enabling_output)

add_subdirectory(midair_fail_cause_enabling_offboard)

add_subdirectory(landing)

add_subdirectory(land_home)

add_subdirectory(land_home_moving_takeoff_frame)

add_subdirectory(land_there)

add_subdirectory(min_height_check)

add_subdirectory(max_height_check)

add_subdirectory(max_throttle_check)
