add_subdirectory(./land_home_service)

add_subdirectory(./land_home_moving_takeoff_frame_service)

add_subdirectory(./land_there_service)

add_subdirectory(./land_service)

add_subdirectory(./max_height_check)

add_subdirectory(./min_height_check)

add_subdirectory(./max_throttle_check)

add_subdirectory(./takeoff_service)
