# add_subdirectory(./land_home_service)

# add_subdirectory(./land_home_service_moving_takeoff_frame)

# add_subdirectory(./land_there_service)

# add_subdirectory(./land_service)

# add_subdirectory(./max_height_check)

# add_subdirectory(./min_height_check)

# add_subdirectory(./max_throttle_check)

# add_subdirectory(./takeoff_service)

# add_subdirectory(./takeoff_service_fail_cause_controller)

# add_subdirectory(./takeoff_service_fail_cause_tracker)

# add_subdirectory(./midair_service_fail_cause_controller)

# add_subdirectory(./midair_service_fail_cause_tracker)

# add_subdirectory(./midair_service_fail_cause_enabling_output_failed)

add_subdirectory(./midair_service_fail_cause_enabling_offboard_failed)

# add_subdirectory(./uav_manager_start_stop)
